--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -19,11 +19,39 @@ jobs:
         dotnet-version: 5.0.x
     - name: Restore dependencies
       run: dotnet restore
-    - name: Build
-      run: dotnet publish OG-Injector-Sharp\OG-Injector-Sharp.csproj /p:PublishProfile=OG-Injector-Sharp\Properties\PublishProfiles\Publish.pubxml
+      
+    - name: Build x86
+      run: dotnet publish OG-Injector-Sharp\OG-Injector-Sharp.csproj /p:PublishProfile="OG-Injector-Sharp\Properties\PublishProfiles\Release x86.pubxml"
+      
+    - name: Build x64
+      run: dotnet publish OG-Injector-Sharp\OG-Injector-Sharp.csproj /p:PublishProfile="OG-Injector-Sharp\Properties\PublishProfiles\Release x64.pubxml"
+      
+    - name: Build x86 Portable
+      run: dotnet publish OG-Injector-Sharp\OG-Injector-Sharp.csproj /p:PublishProfile="OG-Injector-Sharp\Properties\PublishProfiles\Release x86 Portable.pubxml"
+      
+    - name: Build x64 Portable
+      run: dotnet publish OG-Injector-Sharp\OG-Injector-Sharp.csproj /p:PublishProfile="OG-Injector-Sharp\Properties\PublishProfiles\Release x64 Portable.pubxml"
 
-    - name: Upload
+    - name: Upload x86
       uses: actions/upload-artifact@v2
       with:
-        name: OG-Injector-Sharp
+        name: OG-Injector-Sharp-x86
         path: OG-Injector-Sharp/bin/Release/net5.0/publish/OG-Injector-Sharp.exe
+
+    - name: Upload x64
+      uses: actions/upload-artifact@v2
+      with:
+        name: OG-Injector-Sharp-x64
+        path: OG-Injector-Sharp/bin/Release/net5.0/publish/x64/OG-Injector-Sharp.exe
+
+    - name: Upload x86 Portable
+      uses: actions/upload-artifact@v2
+      with:
+        name: OG-Injector-Sharp-x86-Portable
+        path: OG-Injector-Sharp/bin/Release/net5.0/publish/portable/OG-Injector-Sharp.exe
+
+    - name: Upload x64 Portable
+      uses: actions/upload-artifact@v2
+      with:
+        name: OG-Injector-Sharp-x64-Portable
+        path: OG-Injector-Sharp/bin/Release/net5.0/publish/portable/x64/OG-Injector-Sharp.exe
